// Copyright 2018 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";
package ninjaproto;

import "google/protobuf/timestamp.proto";

// NinjaTask message for the log uploaded from chromium developers or buildbot.
// Due to row size limit (1MB) of BigQuery streaming insert, this message
// corresponds to the one task of ninja_log.
// NEXT ID TO USE: 14
message NinjaTask {
  // Identifier of build used in buildbucket api v2 (go/buildbucket-api-v2)
  // Or some random number representing an invocation of build.
  int64 build_id = 1;

  // Build targets passed to ninja.
  repeated string targets = 8;

  // Step name to distinguish multiple compile steps in a build.
  // This is not used when ninja_log is uploaded from chromium developers.
  string step_name = 2;

  // ninjaâ€™s -j value
  int64 jobs = 3;

  // Build directory (e.g. C:/src/chromium/src/out/Default).
  // We cannot collect build directory since it might contain PII.
  reserved 9;
  reserved "build_dir";

  // hostname of machine. (Do not use hostname)
  // We cannot collect hostname since it might contain PII.
  reserved 10;
  reserved "hostname";

  // OS.
  enum OS {
    UNKNOWN = 0;
    WIN = 1;
    LINUX = 2;
    MAC = 3;
  }
  OS os = 11;

  // The number of cpu cores.
  int32 cpu_core = 12;

  // Content of whitelisted args.gn.
  message KeyValue {
    string key = 1;
    string value = 2;
  }
  repeated KeyValue build_configs = 13;

  // Ninja log entry.
  // https://github.com/ninja-build/ninja/blob/265a6eaf399778c746c7d2c02b8742f3c0ff07e9/src/build_log.h#L54
  message LogEntry {
    // Output filenames of task grouped by command_hash.
    repeated string outputs = 1;

    // Hash of running command.
    string command_hash = 2;

    reserved 3, 4;

    // Duration between the time starting task and the time when ninja started.
    // We don't use "google.protobuf.Duration" here in order to make it a bit easier to write a query.
    double start_duration_sec = 5;

    // Duration between the time ending task and the time when ninja started.
    // We don't use "google.protobuf.Duration" here in order to make it a bit easier to write a query.
    double end_duration_sec = 6;
  }

  LogEntry log_entry = 4;

  reserved 5;

  // Weighted build time. This lets us know less parallelized slow build tasks.
  // More details in https://chromium.googlesource.com/chromium/tools/depot_tools/+/5888d6f676722fdac3f65e673c0232667309296c/post_build_ninja_summary.py#52
  // We don't use "google.protobuf.Duration" here in order to make it a bit easier to write a query.
  double weighted_duration_sec = 6;

  // created_at indicates the timestamp when the NinjaTask is uploaded to BigQuery.
  google.protobuf.Timestamp created_at = 7;
}
